--- a/interfaces-practices/platformio.ini
+++ b/interfaces-practices/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-lib_deps = chris--a/Keypad@^3.1.1
+lib_deps = 
+	chris--a/Keypad@^3.1.1
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
