--- a/interfaces-practices/platformio.ini
+++ b/interfaces-practices/platformio.ini
@@ -15,3 +15,7 @@ framework = arduino
 lib_deps = 
 	chris--a/Keypad@^3.1.1
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	adafruit/Adafruit Unified Sensor@^1.1.13
+	adafruit/DHT sensor library@^1.4.4
+	arduino-libraries/Servo@^1.2.1
+	z3t0/IRremote@^4.2.0
